style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -8,6 +8,7 @@ html {
 
     // responsive to tablet
     @media only screen and (max-width: $tablet) {
+        max-width: 100vw !important;
         &.nav-open {
             overflow: hidden;
             max-height: 100vh !important;
